# rp2_ext_peri_util_lib

./: CMakeLists.txt  Doxyfile
include/: ads7042.h  at24cs0x.h  dac081c08x.h  dac121s101.h  fan_control.h  nv_struct.h  pi4ioe5v6408.h  serial_io_utils.h
src/: README.md  adc_spi_master_unidir.pio  ads7042.c  at24cs0x.c  dac081c08x.c  dac121s101.c  fan_control.c  nv_struct.c  pi4ioe5v6408.c  serial_io_utils.c
